[package]
name = "rscs"
version = "0.0.0"
description = """
Simple, fast, and pure Rust validation of Certificate Authority trust chains.
"""
authors = ["Brian Hession"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bhesh/rscs"
categories = []
keywords = []
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
der = { version = "0.7.8", default-features = false, features = ["derive", "pem"] }
digest = { version = "0.10.7", default-features = false }
hashbrown = { version = "0.14.2", default-features = false, features = ["ahash"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
x509-verify = { version = "0.4.2", features = ["sha1", "sha2", "dsa", "rsa", "ecdsa", "ed25519", "x509", "pem"] }

[features]
legacy_digests = ["x509-verify/md2", "x509-verify/md5"]
std = []
